fix: add description of landing page

--- a/src/frontend_workspaces/frontend/index.html
+++ b/src/frontend_workspaces/frontend/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <title>CUGA</title>
+    <meta name="description" content="Try out CUGA Agent running on a live enterprise demo applications. See how CUGA can help you automate tasks and improve your productivity.">
   </head>
   <script src="tailwind.js"></script>
 
